--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "watch": "webpack --watch",
     "build": "NODE_ENV=production webpack",
     "build-dev": "webpack"
-    
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,13 @@
     "@babel/core": "^7.12.17",
     "@babel/preset-env": "^7.12.17",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^1.3.8",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
